--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dots_indicator: ^3.0.0
   intl: ^0.18.1
   cloud_firestore: ^4.7.1
+  firebase_auth: ^4.7.1
 
 dev_dependencies:
   flutter_test:
