--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.18.1
   cloud_firestore: ^4.7.1
   firebase_auth: ^4.7.1
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
